# ElectrifEye

./: CMakeLists.txt  Charge.cpp  Charge.h  Constants.h  ElectricFieldController.cpp  ElectricFieldController.h  GeometryController.cpp  Point.cpp  Point.h  PointCharge.cpp  PointCharge.h  README.md  World.cpp  World.h  main.cpp
include/ElectrifEye/: Charge.h  Constants.h  ElectricFieldController.h  GeometricVector.h  GeometryController.h  Point.h  PointCharge.h  Units.h  World.h
src/: Charge.cpp  ElectricFieldController.cpp  GeometricVector.cpp  GeometryController.cpp  Point.cpp  PointCharge.cpp  World.cpp  main.cpp
